# rextendr

./: .Rbuildignore  .gitignore  .lintr  404.html  CLAUDE.md  CODE-OF-CONDUCT.html  CODE-OF-CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  codecov.yml  configure.ucrt  cran-comments.md  index.html  index.md  jarl.toml  justfile  llms.txt  pkgdown.yml  principles.html  principles.md  search.json  sitemap.xml
R/: badge.R  clean.R  clean_code.R  cran-compliance.R  create_extendr_package.R  eval.R  exported_functions.R  extendr_function.R  features.R  filetracker_roclet copy.R  filetracker_roclet.R  find_exports.R  find_extendr.R  function_options.R  generate_toml.R  helpers.r  import-standalone-obj-type.R  import-standalone-types-check.R  install_libR_bindings.R  knitr_engine.R  license_note.R  make_module_macro.R  make_wrappers.R  read_cargo_metadata.R  register_extendr.R  registration_roclet.R  rextendr.R  rextendr_document.R  run_cargo.R  rust_sitrep.R  sanitize_code.R  setup.R  source.R  standalone-purrr.R  toml_serialization.R  track_rust_source.R  try_save_all.R  ui.R  update_extendr.R  update_scaffold.R  (+12 more)
articles/: index.html  index.md  package.html  package.md  rmarkdown.html  rmarkdown.md  setting_up_rust.html  setting_up_rust.md
dev/: CODE-OF-CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE-text.html  LICENSE-text.md  LICENSE.html  (+11 more)
inst/rust/libR-sys/: Cargo.toml  build.rs
inst/rust/libR-sys/src/: lib.rs
(+276 files in other folders)
