[package]
name = "libR-sys"
version = "*"  # dummy version, will be replaced with actual version, keep this on line 3 of this file
authors = ["andy-thomason <andy@andythomason.com>"]
edition = "2018"
description = "Low level bindings to the R programming language."
license = "MIT"
links = "R"
documentation = "https://extendr.github.io/libR-sys/master/libR_sys/index.html"

